<resources>
    <string name="app_name">Timer</string>
    <string name="timeleft">TIME IS PRECIOUS</string>
    <string name="start">START</string>
    <string name="time">0</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="you">TIMER</string>
    <string name="reset">RESET</string>
    <string name="name">\@SAyantan</string>
</resources>
